kernel - Restrict kill(-1, ...) to the reaper group as well
* When kill(-1, ...) is issued to 'all processes', restrict the list
  of processes signaled to the sender's reaper group or any sub-group
  of that group.

* This works around issues found when testing low maxproc limits.
  At least one (and probably several) third party programs do not
  properly handle errors when [v]fork() returns -1 and may try to
  signal the returned 'pid', which being -1 crowbars the entire system.

* Fixes issue when a cmake running under synth hits a fork failure
  and tries to signal the whole system.  With this change, the cmake
  winds up only crowbaring its own chroot due to synthexec's use of
  the reaper feature.

* Adjust the kill.2 manual page to reflect the change.

--- a/lib/libc/sys/kill.2
+++ b/lib/libc/sys/kill.2
@@ -96,6 +96,10 @@ with the same uid as the user excluding the process sending the signal.
 No error is returned if any process could be signaled.
 .El
 .Pp
+NOTE! If the sending process is restricted by a reaper, the signal is
+further restricted to processes only within or under that reaper.
+The reaper itself can only be signalled directly.
+.Pp
 For compatibility with System V,
 if the process number is negative but not -1,
 the signal is sent to all processes whose process group ID
