Use standard section name 'AUTHORS' in several manual pages.

--- a/lib/libfsid/libfsid.3
+++ b/lib/libfsid/libfsid.3
@@ -162,7 +162,7 @@ The
 function returns the number of supported filesystems.
 .Sh SEE ALSO
 .Xr devattr 3
-.Sh AUTHOR
+.Sh AUTHORS
 .An -nosplit
 The library and the manual page were written by
 .An Akos Kovacs Aq Mt akoskovacs@gmx.com .
