--- a/share/man/man9/DB_COMMAND.9
+++ b/share/man/man9/DB_COMMAND.9
@@ -114,6 +114,6 @@ db>
 .Ed
 .Sh SEE ALSO
 .Xr ddb 4
-.Sh AUTHOR
+.Sh AUTHORS
 This manual page was written by
 .An Guillaume Ballet Aq Mt gballet@gmail.com .
