--- a/share/man/man9/make_autoclone_dev.9
+++ b/share/man/man9/make_autoclone_dev.9
@@ -246,5 +246,5 @@ The
 .Xr devfs 5
 clone facilities and the associated functions all appeared in
 .Dx 2.3 .
-.Sh AUTHOR
+.Sh AUTHORS
 .An Alex Hornung
