Fix some Xr punctuation issues in several manual pages.

--- a/lib/libc/sys/lwp_setname.2
+++ b/lib/libc/sys/lwp_setname.2
@@ -74,7 +74,7 @@ The
 parameter is outside the process's allocated address space.
 .El
 .Sh SEE ALSO
-.Xr lwp_create 2
+.Xr lwp_create 2 ,
 .Xr setproctitle 3
 .Sh HISTORY
 The
