Fix some minor issues in several manual pages.

--- a/share/man/man4/ecc.4
+++ b/share/man/man4/ecc.4
@@ -57,7 +57,7 @@ provides support for ECC memory controllers.
 If ECC support is enabled in the BIOS,
 the number of ECC errors is exposed through
 .Dv HW_SENSORS
-.Xr sysctl
+.Xr sysctl 8
 tree.
 For example:
 .Bd -literal -offset indent
