--- a/share/man/man9/mutex.9
+++ b/share/man/man9/mutex.9
@@ -64,7 +64,7 @@
 .In sys/globaldata.h
 .In sys/mutex2.h
 .Ft void
-.Fn mtx_init "mtx_t *mtx, const char *ident"
+.Fn mtx_init "mtx_t *mtx" "const char *ident"
 .Ft void
 .Fn mtx_uninit "mtx_t *mtx"
 .Ft int
