--- a/usr.sbin/autofs/automount.8
+++ b/usr.sbin/autofs/automount.8
@@ -82,7 +82,7 @@ Try to unmount filesystems mounted by
 .Xr autofs 5
 mounts are not unmounted.
 To unmount all
-.Xr autofs
+.Xr autofs 5
 mounts, use
 .Cm "umount -At autofs".
 .It Fl v
