kernel - Fix rare lockmgr() state transition (2)
* Fix two lock timeout cases for LK_EXCLUPGRADE and LK_UPGRADE, and
  fix a bug in undo_upreq().

* A tsleep failure (such as the LK_TIMELOCK case via
  vm_map_lock_read_to()) was not properly backing-out a LKC_UPREQ,
  resulting in a situation where the lock becomes exclusively owned
  by nobody and deadlocks against all-comers.  Fix by properly
  calling undo_upreq().

* Fix a bug in undo_upreq() itself.  When undoing a granted UPREQ,
  the lockholder must be set prior to releasing the now-granted
  exclusive lock in order to avoid an assertion panic.

* While we are at it, replace a weird cmpset count,count with a
  fetchadd(count, 0).

--- a/share/man/man9/lock.9
+++ b/share/man/man9/lock.9
@@ -138,14 +138,24 @@ Upgrade a shared lock to an exclusive lock.
 Fails with
 .Er EBUSY
 if there is someone ahead of you in line waiting for an upgrade.
-If this call fails, the shared lock is lost.
-Attempts to upgrade an exclusive lock will cause a
-.Xr panic 9 .
+If this call fails for any reason, the shared lock is lost.
+Attempts to upgrade an exclusive lock not already
+owned by the caller will cause a
+.Xr panic 9 ,
+but otherwise will always succeed.
+NOTE! When this operation succeeds, it guarantees that no other
+exclusive lock was able to acquire the lock ahead of you, but
+as indicated above, if it fails your current shared lock is lost.
 .It Dv LK_UPGRADE
 Upgrade a shared lock to an exclusive lock.
-If this call fails, the shared lock is lost.
-Attempts to upgrade an exclusive lock will cause a
-.Xr panic 9 .
+If this call fails for any reason, the shared lock is lost.
+Attempts to upgrade an exclusive lock not already
+owned by the caller will cause a
+.Xr panic 9 ,
+but otherwise will always succeed.
+WARNING!  This operation can block with the current lock temporarily
+released, and other exclusive or shared lock holders can inject before
+the lock is acquired on your behalf.
 .It Dv LK_RELEASE
 Release the lock.
 Releasing a lock that is not held can cause a
