--- a/usr.sbin/fstyp/fstyp.8
+++ b/usr.sbin/fstyp/fstyp.8
@@ -28,7 +28,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd September 23, 2017
+.Dd October 12, 2017
 .Dt FSTYP 8
 .Os
 .Sh NAME
@@ -44,7 +44,7 @@
 The
 .Nm
 utility is used to determine the filesystem type on a given device.
-It can recognize ISO-9660, Ext2, FAT, NTFS, UFS, and HAMMER filesystems.
+It can recognize ISO-9660, Ext2, FAT, NTFS, UFS, HAMMER, and HAMMER2 filesystems.
 When the
 .Fl u
 flag is specified,
