Remove "kernel ppp", i.e. if_ppp.ko and pppd(8).
It has been replaced by ppp(8), in conjunction with tun(4).

While here, rename the ppp-user rc script to 'ppp' and fix up
REQUIRE/PROVIDE situation.

--- a/share/man/man8/rc.8
+++ b/share/man/man8/rc.8
@@ -31,7 +31,7 @@
 .\"     @(#)rc.8	8.2 (Berkeley) 12/11/93
 .\" $FreeBSD: src/share/man/man8/rc.8,v 1.22 2002/12/12 17:25:58 ru Exp $
 .\"
-.Dd October 14, 2017
+.Dd October 17, 2017
 .Dt RC 8
 .Os
 .Sh NAME
@@ -188,7 +188,7 @@ In order of startup, these are:
 .It Pa NETWORKING
 Ensure basic network services are running, including general
 network configuration
-.Pq Pa netif , routing , network_ipv6 , ppp-user .
+.Pq Pa netif , routing , network_ipv6 , ppp .
 .It Pa SERVERS
 Ensure basic services (such as
 .Pa NETWORKING
