pstat.8: Add markup.

--- a/usr.sbin/pstat/pstat.8
+++ b/usr.sbin/pstat/pstat.8
@@ -65,7 +65,9 @@ The following options are available:
 .It Fl n
 Print devices out by major/minor instead of name.
 .It Fl h
-Print sizes with human-readable scaling.  BLOCKSIZE is ignored.
+Print sizes with human-readable scaling.
+.Ev BLOCKSIZE
+is ignored.
 .It Fl k
 Print sizes in kilobytes, regardless of the setting of the
 .Ev BLOCKSIZE
